--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,15 @@
   box-sizing: border-box;
 }
 
+.logo{
+  width: 45px;
+  float: left;
+  border-radius: 50%;
+  margin-top: 3px;
+  margin-left: 20px;
+}
+
+
 body {
   margin: 0 auto;
   max-width: 50em;
